--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,111 +1,26 @@
-$nav-item-padding: 20px 40px;
-$hover-underbar-height: 6px;
+$hover-underline-height: 6px;
 $scale: scaleY(3.5);
-$underbar-color: rgb(0, 200, 200);
+$underline-color: rgb(0, 200, 200);
 
-.nav-wrapper {
-  z-index: 100;
-  min-width: 100%;
+ul {
   display: flex;
-  justify-content: space-between;
-  background-color: whitesmoke;
-
-  .company-name {
-    padding: $nav-item-padding;
-  }
-
-  .nav-bar {
-    padding-right: 40px;
-  }
-
-  .underbar {
-    width: 10px;
-    height: 2px;
-    background-color: black;
-    left: 10px;
-    top: 54px;
-    position: absolute;
-    transition: 0.5s ease;
-  }
-  .home {
-    width: 62px;
-    left: 0px;
-  }
-  .services {
-    width: 76px;
-    left: 62px;
-  }
-  .enviro {
-    width: 211px;
-    left: 138px;
-  }
-  .asset {
-    width: 125px;
-    left: 349px;
-  }
-  .case {
-    width: 92px;
-    left: 474px;
-  }
-  .contact {
-    width: 96px;
-    left: 570px;
-  }
-
-  ul {
-    display: flex;
-    position: relative;
-  }
-  .underbar {
-    z-index: 100;
-  }
-  li {
-    padding: 20px 10px;
-    transition: 0.5s ease;
-    &:hover {
-      cursor: pointer;
-      &:nth-of-type(1):hover ~ .underbar {
-        left: 0;
-        width: 63px;
-        transform: $scale;
-        background: $underbar-color;
-      }
-      &:nth-of-type(1):active ~ .underbar {
-        left: 0;
-        width: 63px;
-        transform: $scale;
-        background: $underbar-color;
-      }
-      &:nth-of-type(2):hover ~ .underbar {
-        left: 62px;
-        width: 76px;
-        transform: $scale;
-        background: $underbar-color;
-      }
-      &:nth-of-type(3):hover ~ .underbar {
-        left: 138px;
-        width: 211px;
-        transform: $scale;
-        background: $underbar-color;
-      }
-      &:nth-of-type(4):hover ~ .underbar {
-        left: 349px;
-        width: 125px;
-        transform: $scale;
-        background: $underbar-color;
-      }
-      &:nth-of-type(5):hover ~ .underbar {
-        left: 474px;
-        width: 92px;
-        transform: $scale;
-        background: $underbar-color;
-      }
-      &:nth-of-type(6):hover ~ .underbar {
-        width: 96px;
-        left: 570px;
-        transform: $scale;
-        background: $underbar-color;
-      }
-    }
-  }
+  align-items: center;
+  position: relative;
+  // flex-wrap: wrap;
 }
+.underline {
+  z-index: 100;
+  // wrap hr to next line
+  flex: 1 1 100%;
+  position: absolute;
+  height: 2px;
+  width: 20px;
+  bottom: 0;
+  padding: 0px;
+  margin: 0px;
+  margin-left: 10px;
+  transition: 0.3s ease-in-out;
+  border: none;
+  background: rgb(46, 205, 115);
+}
+//
