--- a/src/components/Carousel/Arrow.scss
+++ b/src/components/Carousel/Arrow.scss
@@ -2,11 +2,13 @@
   top: 50%;
   left: 25px;
   transform: translate(0, -50%);
+  z-index: 2;
 }
 .right-button {
   top: 50%;
   right: 25px;
   transform: translate(0, -50%);
+  z-index: 2;
 }
 .arrows {
   transition: 0.1s ease;
