--- a/src/components/Carousel/ImageSlide.scss
+++ b/src/components/Carousel/ImageSlide.scss
@@ -1,4 +1,28 @@
 .img-slide {
   width: 100%;
   background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.img-cover {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(82, 82, 82, 0.4);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.img-text-wrapper {
+  max-width: 500px;
+  .img-title {
+    color: whitesmoke;
+    font-size: 2.8rem;
+    margin-bottom: 25px;
+  }
+  .img-text {
+    color: whitesmoke;
+    line-height: 2.1rem;
+  }
 }
