--- a/src/components/ServicesPanel/ServiceCard.scss
+++ b/src/components/ServicesPanel/ServiceCard.scss
@@ -1,6 +1,21 @@
 .service-card {
-  border: 1px solid green;
-  min-width: 100px;
-  min-height: 150px;
+  border: 1.2px solid rgb(46, 205, 113);
+  min-width: 255px;
+  max-width: 255px;
+  min-height: 276px;
+  max-height: 276px;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  .service-card-icon {
+    margin-top: 50px;
+  }
+  .service-card-header {
+    font-weight: 500;
+    margin: 20px 0px;
+    font-size: 1.2rem;
+  }
+  .service-card-text {
+    line-height: 1.35rem;
+  }
 }
