--- a/src/components/ServicesPanel/ServicesPanel.scss
+++ b/src/components/ServicesPanel/ServicesPanel.scss
@@ -1,8 +1,9 @@
 .services-wrapper {
   min-width: 100%;
-  height: 450px;
+  height: 630px;
   background-color: rgb(251, 251, 251);
-  padding: 60px 40px;
+  padding: 30px 100px;
+  padding-bottom: 95px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -10,8 +11,14 @@
 .services-title {
   display: flex;
   flex-direction: column;
+  .leaf-icon {
+    margin: 10px 0px;
+  }
   h2 {
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     font-weight: 500;
+  }
+  p {
+    margin-top: 10px;
   }
 }
