--- a/src/components/ServicesPanel/ServiceCard.scss
+++ b/src/components/ServicesPanel/ServiceCard.scss
@@ -1,3 +1,5 @@
+$ms: 0.12s;
+
 .service-card {
   border: 1.2px solid rgb(46, 205, 113);
   min-width: 255px;
@@ -7,7 +9,21 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  transition: $ms ease-in;
+
+  &:hover {
+    background-color: rgb(46, 205, 113);
+    color: whitesmoke;
+    cursor: pointer;
+    .service-card-icon {
+      fill: white;
+    }
+  }
   .service-card-icon {
+    transition: $ms ease-in;
+  }
+
+  .service-card-icon-wrapper {
     margin-top: 50px;
   }
   .service-card-header {
