--- a/src/components/ServicesPanel/ServiceCardsWrapper.scss
+++ b/src/components/ServicesPanel/ServiceCardsWrapper.scss
@@ -1,4 +1,19 @@
 .service-cards-wrapper {
-  display: flex;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+
+  @media screen and (max-width: 768px) {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-row-gap: 20px;
+    align-content: center;
+    justify-items: center;
+  }
+  @media screen and (max-width: 768px) {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    grid-row-gap: 20px;
+    align-content: center;
+    justify-items: center;
+  }
 }
