--- a/src/components/ServicesPanel/ServicesPanel.scss
+++ b/src/components/ServicesPanel/ServicesPanel.scss
@@ -1,6 +1,6 @@
 .services-wrapper {
   min-width: 100%;
-  background-color: rgb(251, 251, 251);
+  background-color: whitesmoke;
   padding: 50px 50px;
   display: flex;
   flex-direction: column;
