--- a/src/components/ServicesPanel/ServiceCardsWrapper.scss
+++ b/src/components/ServicesPanel/ServiceCardsWrapper.scss
@@ -1,8 +1,9 @@
 .service-cards-wrapper {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  justify-items: center;
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 960px) {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
     grid-row-gap: 20px;
