--- a/src/components/NavBar/NavBarWrapper.scss
+++ b/src/components/NavBar/NavBarWrapper.scss
@@ -5,6 +5,7 @@ $nav-item-padding: 20px 40px;
   min-width: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   background-color: whitesmoke;
 
   .company-name {
