--- a/src/components/MobileMenu/MobileMenu.scss
+++ b/src/components/MobileMenu/MobileMenu.scss
@@ -18,11 +18,15 @@
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-    li {
+    a {
+      text-decoration: none;
+      color: antiquewhite;
       font-size: 2rem;
       margin-bottom: 10px;
       padding: 20px 0px;
-      color: antiquewhite;
+      &:visited {
+        color: antiquewhite;
+      }
     }
   }
 }
